# weakget

./: README.md  pyproject.toml  weakget.py
tests/: test_common.py  test_nothing.py  test_pep505.py  test_weakget.py
