[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "weakget"
authors = [{name = "Sye van der Veen", email = "syeberman@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
classifiers = ["License :: Public Domain"]

[project.urls]
Home = "https://github.com/Syeberman/weakget"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
